fix (HSK-456) remove top and bottom padding from buttons in order to adjust their height on IE

--- a/source/_patterns/00-atoms/05-buttons/00-buttons.scss
+++ b/source/_patterns/00-atoms/05-buttons/00-buttons.scss
@@ -3,7 +3,7 @@
   min-height: 4em;
   outline: none;
   border: 1px solid $colorBlack;
-  padding: 0 2em;
+  padding: 1em 2em;
   line-height: 1.85em;
   font-size: 0.75em;
   font-weight: 300;
