--- a/source/_patterns/02-organisms/10-checkout/05-checkout-form-voucher.scss
+++ b/source/_patterns/02-organisms/10-checkout/05-checkout-form-voucher.scss
@@ -21,6 +21,7 @@
       &-btn {
         background-color: $colorSilver;
         border-color: $colorSilver;
+        min-height: none;
         &-wrapper {
           display: flex;
           flex-flow: column nowrap;
